--- a/news-reader/src/App.css
+++ b/news-reader/src/App.css
@@ -1,5 +1,3 @@
-/* src/App.css */
-
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -87,7 +85,7 @@ h1 {
   display: flex;
   justify-content: center;
   width: 100%;
-  max-width: 600px; /* Adjust this width as necessary */
+  max-width: 600px;
 }
 
 input[type="text"] {
